Bug Fixed: New user/ tutors unable to complete registration

--- a/account/team/index.html
+++ b/account/team/index.html
@@ -1455,7 +1455,7 @@
         // if (role_empRole === ORG_ROLE_OWNER || role_empRole === ORG_ROLE_SUPER_ADMIN || role_empRole === ORG_ROLE_ADMIN)
         //   pointerEventsClass = ""
       }
-      role = role + " " +data[ORG_ROLE_UID]
+      // role = role + " " +data[ORG_ROLE_UID]
 
       // Overwrite if your are the person
       if (data[ORG_ROLE_UID] === org_uid){
